fixing grid
solved problem of items not fitting into rows

--- a/style.css
+++ b/style.css
@@ -373,14 +373,14 @@ footer{
     list-style: none;
   }
   li{
-    grid-column: 1 / span 4; 
+    grid-column: span 4; 
     width: 100%;
     height: 100%;
     margin-bottom: 0px;
   }
-  li:nth-child(2n) {
+  /* li:nth-child(2n) {
     grid-column: 5 / span 4;
-  }
+  } */
   .block{
     background-color: red;
     display: flex;
@@ -528,17 +528,11 @@ footer{
     grid-gap: 40px;
     list-style: none;
   }
-  li:nth-child(1n){
-    grid-column: 1 / span 4; 
+  li{
+    grid-column: span 4; 
     width: 100%;
     height: 100%;
     margin-bottom: 0px;
-  }
-  li:nth-child(2n) {
-    grid-column: 5 / span 4;
-  }
-  li:nth-child(3n) {
-    grid-column: 9 / span 4;
   }
   .block{
     background-color: red;
